@@ -1,3 +1,8 @@
+2010-03-18  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-site.el: Bind key to semantic-tag-folding-fold-block and
+	semantic-tag-folding-show-block.
+
 2010-03-17  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el: Rebind key for recent-jump.
